# claw

./: .gitignore  README.md  changelog.md
.claude/tasks/: active.md
.github/: GOVERNANCE.md  gitleaks.toml
.github/wiki/: Changelog.md  Contributing.md  Getting-Started.md  Screen-Reader-Guide.md  _Sidebar.md  libnclaw-Dev-Guide.md  testing.md
.github/workflows/: android.yml  build-release.yml  ci.yml  claw-release.yml  companion-build.yml  coverage.yml  desktop.yml  flutter-ci.yml  ios.yml  libnclaw-build.yml  pub-get-matrix.yml
app/: pubspec.yaml
app/fastlane/: Fastfile
app/lib/: main.dart
app/test/: widget_test.dart
apps/android/: .env.example  README.md  settings.gradle.kts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: browser.rs  config.rs  main.rs  os_control.rs  screen_lock.rs  token_sync.rs  ws_client.rs
apps/ios/: .env.example  README.md
apps/web/: .env.example  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: .env.example  Makefile  README.md  nself.yaml
desktop/: Package.swift
integration_test/: smoke_test.bats
libs/libnclaw/: Cargo.toml
scripts/: build-appimage.sh  build-deb.sh  build-dmg.sh  build-rpm.sh  codesign-macos.sh  generate-downloads-index.sh  generate-update-feeds.sh  notarize-macos.sh
store/android/: description.txt  short_description.txt
test/e2e/: playwright.config.ts
test/golden/: message_bubble_test.dart  tool_call_test.dart
test/widget/: conversation_screen_test.dart  onboarding_test.dart  settings_screen_test.dart
tests/e2e/: claw.spec.ts
(+165 files in other folders)
