[package]
name = "nself-companion"
version = "0.1.0"
edition = "2021"
description = "nSelf Desktop Companion — bridges nClaw server to local machine"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
keyring = "3"
dirs = "5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
notify-rust = "4"
url = "2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
